--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
+    <meta name="theme-color" content="#0C2A42" />
+    <meta name="description" content="Jerome Baille's web developer portfolio" />
+    <meta name="keywords" content="web developer, open for work, full remote only, front end, back end, full stack, angular, react, node js, jerome baille">
+    <meta name="author" content="Jerome Baille">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Jerome BAILLE - Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
