--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="theme-color" content="#0C2A42" />
     <meta name="description" content="Jerome Baille's web developer portfolio" />
     <meta name="keywords" content="web developer, open for work, full remote only, front end, back end, full stack, angular, react, node js, jerome baille">
